# culture-engine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  plan.md
.github/: BRANCH_PROTECTION.md
apps/backend/: .env.example  QUICKSTART.md  README.md  pyproject.toml  run.sh  test_workflow_agent.py
apps/backend/examples/: interactive_workflow_generator.py  mind_delegate_example.py  workflow_example.py
apps/backend/src/backend/: config.py  main.py  models.py
apps/backend/src/backend/agents/: __init__.py  anthropic_stream.py  base.py  test_agent.py  tools.py  types.py  workflow_agent.py
apps/backend/src/backend/connectors/: __init__.py  base.py  contracts.py  github.py  google.py  hr.py  jira.py  registry.py  slack.py
apps/backend/src/backend/connectors/builder/: agent.py  template.py  validator.py
apps/backend/src/backend/mind/: __init__.py  database.py  events.py  exceptions.py  identity.py  memory.py  orchestrator.py  pipeline.py  reasoning.py  schema.py  self_knowledge.py  service.py  store.py
apps/backend/src/backend/mind/tools/: __init__.py  factory.py  primitives.py  registry.py  runtime_store.py
apps/backend/src/backend/simulator/: failures.py  state.py
apps/backend/src/backend/workflow/: pipeline.py  report.py  schema.py  store.py
apps/backend/tests/: test_agent_base.py  test_integration_mind_openrouter.py  test_integration_openrouter.py  test_mind_api.py  test_mind_core.py  test_mind_persistence.py  test_mind_service.py  test_pipeline.py  test_tools_primitives.py  test_workflow_generation.py
docs/: decisions.md  (+1 more)
(+96 files in other folders)
